--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
             <div class="progress-bar-container">
                 <input type="range" id="progress-bar" value="0" max="100">
             </div>
+            <div class="upload-container">
+                <button id="upload-btn" class="upload-btn">+ Add Songs</button>
+                <input type="file" id="file-input" multiple accept="audio/*" style="display: none;">
+            </div>
         </div>
     </div>
 
