Add Schoolify logo, update header design, and favicon

--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Spotify Music App</title>
+    <title>Schoolify - School Music Player</title>
+    <link rel="icon" href="assets/schoolify-logo.svg" type="image/svg+xml">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="app-container">
         <header>
-            <h1>Music Player</h1>
+            <div class="header-content">
+                <img src="assets/schoolify-logo.svg" alt="Schoolify Logo" class="logo">
+                <h1>Schoolify Music Player</h1>
+            </div>
         </header>
 
         <div class="player">
