Add search bar and instant song search feature to UI

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             </div>
         </header>
 
+        <div class="search-bar-container">
+            <input type="text" id="search-bar" placeholder="Search songs or artists...">
+        </div>
         <div class="player">
             <div class="album-art">
                 <img id="album-art" src="https://via.placeholder.com/200" alt="Album Art">
