--- a/index.html
+++ b/index.html
@@ -35,10 +35,7 @@
             <div class="progress-bar-container">
                 <input type="range" id="progress-bar" value="0" max="100">
             </div>
-            <div class="upload-container">
-                <button id="upload-btn" class="upload-btn">+ Add Songs</button>
-                <input type="file" id="file-input" multiple accept="audio/*" style="display: none;">
-            </div>
+            <!-- Upload button temporarily removed for bugfixing -->
         </div>
     </div>
 
